Force open security gates